test_regress/t/t_case_inside_bad.out
%Error: t/t_case_inside_bad.v:9:20: Illegal to have inside on a casex/casez
    9 |       casex (1'bx) inside
      |                    ^~~~~~
%Error: Exiting due to
